--- a/systemd_setup.yml
+++ b/systemd_setup.yml
@@ -6,5 +6,6 @@
 - name: start {{component}} service
   ansible.builtin.systemd_service:
     name: {{component}}
+    state: restarted
     enabled: yes
     daemon_reload: yes
