--- a/catalogue.yml
+++ b/catalogue.yml
@@ -5,7 +5,7 @@
     component: catalogue
   tasks:
     - name: Nodejs setup
-      ansible.builtin.import_task: nodejs.yml
+      ansible.builtin.import_tasks: nodejs.yml
 
 
 
