--- a/nodejs.yml
+++ b/nodejs.yml
@@ -15,5 +15,8 @@
     chdir: /app
 
 - name: schema setup
-  ansible.builtin.import_tasks: app-preq.yml
+  ansible.builtin.import_tasks: mongo-schema.yml
+
+- name: Systemd setup
+  ansible.builtin.import_tasks: systemd-setup.yml
 
