--- a/redis.yml
+++ b/redis.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Install Redis Repo
       ansible.builtin.dnf:
-        name: yum install https://rpms.remirepo.net/enterprise/remi-release-7.rpm
+        name: https://rpms.remirepo.net/enterprise/remi-release-7.rpm
         state: installed
 
     - name: Enable Redis Module
