--- a/cart.yml
+++ b/cart.yml
@@ -1,5 +1,8 @@
-#component=cart
-#source common.sh
-#
-#
-#func_nodejs
+- name: Cart Setup
+  hosts: all
+  become: yes
+  vars:
+    component: cart
+  tasks:
+    - name: Nodejs setup
+      ansible.builtin.import_tasks: nodejs.yml
