--- a/nodejs.yml
+++ b/nodejs.yml
@@ -16,6 +16,7 @@
 
 - name: schema setup
   ansible.builtin.import_tasks: mongo-schema.yml
+  when: schema is defined
 
 - name: Systemd setup
   ansible.builtin.import_tasks: systemd-setup.yml
