--- a/cart.service
+++ b/cart.service
@@ -3,8 +3,8 @@ Description = Cart Service
 
 [Service]
 User=roboshop
-Environment=REDIS_HOST=REDIS-SERVER-IP
-Environment=CATALOGUE_HOST=CATALOGUE-SERVER-IP
+Environment=REDIS_HOST=redis-dev.learntechnology.space
+Environment=CATALOGUE_HOST=catalogue-dev.learntechnology.space
 Environment=CATALOGUE_PORT=8080
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
